--- a/style.css
+++ b/style.css
@@ -16,7 +16,12 @@
   --btn-bg-color-hover: #fccf67;
 }
 
+a {
+  color: inherit;
+}
+
 body {
+  color: var(--text-color);
   font-family: "Segoe UI", Tahoma, sans-serif;
 }
 
@@ -45,20 +50,58 @@ body {
 
 .hero__grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
+  gap: 20px;
 }
 
 .hero {
   grid-column: 1/4;
   grid-row: 1/3;
+
+  display: grid;
+  gap: 20px;
 }
 
 .right {
-  grid-column: 3/4;
+  grid-column: 4/5;
   grid-row: 1/2;
+
+  display: grid;
+  gap: 20px;
 }
 
 .notice {
-  grid-column: 1/4;
+  grid-column: 1/5;
+  background: #412a4c;
+  padding: 25px;
+  font-size: 24px;
+  margin-top: 40px;
+}
+
+.hero__headline {
+  font-size: 62px;
+  font-weight: 500;
+}
+
+.headline--highlight {
+  color: var(--accent-color);
+}
+
+.hero__byline {
+  font-size: 22px;
+  font-weight: 400;
+}
+
+.right__button {
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  color: var(--text-color);
+}
+
+.right__byline {
+  color: #a68bb0;
+  font-size: 18px;
+  font-weight: 400;
 }
