--- a/style.css
+++ b/style.css
@@ -50,6 +50,13 @@ body {
   text-align: center;
   font-size: 48px;
   font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.section__byline {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
   margin-bottom: 40px;
 }
 
@@ -119,6 +126,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+  margin-top: 40px;
 }
 
 .card {
@@ -153,4 +161,68 @@ body {
 .card__byline {
   font-size: 24px;
   font-weight: 400;
+}
+
+/* APPS SECTION */
+
+.section__apps {
+  padding-bottom: 120px;
+}
+
+.apps {
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  gap: 20px;
+  margin-top: 40px;
+  justify-content: center;
+}
+
+.app {
+  text-align: center;
+  font-size: 20px;
+  display: grid;
+  gap: 15px;
+}
+
+.app__title {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 17px;
+}
+
+.app__byline {
+}
+
+.app__buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.app__buttons > .btn {
+  background-color: var(--btn-bg-color);
+  color: var(--dark-bg-color);
+  padding: 8px 20px;
+  text-decoration: none;
+  font-weight: 500;
+  border-radius: 1000px;
+  transition: all 0.3s;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+
+  font-size: 18px;
+
+}
+
+.app__buttons > .btn:hover {
+  background-color: var(--btn-bg-color-hover);
+}
+
+.btn svg {
+  height: 20px;
+  width: 20px;
 }
