--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ body {
 
 /* HERO SECTION */
 
+.section__hero {
+  padding-top: 120px;
+}
+
 .hero__grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -74,7 +78,7 @@ body {
   grid-row: 1/3;
 
   display: grid;
-  gap: 20px;
+  gap: 40px;
 }
 
 .right {
@@ -208,14 +212,13 @@ body {
   font-weight: 500;
   border-radius: 1000px;
   transition: all 0.3s;
-  
+
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 5px;
 
   font-size: 18px;
-
 }
 
 .app__buttons > .btn:hover {
